# tucano

./: Cargo.toml  Makefile  README.md
assets/: blocklist.json
data/: io.github.vlucas14sp.Tucano.desktop
src/: adblock.rs  browser.rs  db.rs  downloads.rs  find.rs  main.rs  session.rs  wheel.rs
