[package]
name = "tucano"
version = "0.1.0"
edition = "2021"
description = "Tucano — navegador web nativo para GNOME, escrito em Rust com WebKitGTK"

[dependencies]
gtk = { version = "0.9", package = "gtk4", features = ["v4_12"] }
adw = { version = "0.7", package = "libadwaita", features = ["v1_5"] }
webkit = { version = "0.4", package = "webkit6" }
